<resources>
    <string name="app_name">Silent Observer</string>
    <string name="logout_button_text">Log out</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="hey_new_to_write_it">New to Silent Observer ?</string>
    <string name="signup">Register Here</string>
    <string name="reg_button">Register</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_have_an_account2">Already have an account</string>
    <string name="start_collecting_data_btn_text">Collect Sensor Data</string>
    <string name="acc_des">Accelerometer Readings</string>
    <string name="gyro_des">Gyroscope Readings</string>
    <string name="x_value">x value</string>
    <string name="y_value">y value</string>
    <string name="z_value">z value</string>
    <string name="p_value">p value</string>
    <string name="q_value">q value</string>
    <string name="r_value">r value</string>
    <string name="magnetoMete">Magnetometer</string>
    <string name="orientation_text">Orientation (in degree)</string>
    <string name="lValue">l value</string>
    <string name="mValue">m value</string>
    <string name="nValue" />
    <string name="nValue1">n value</string>
    <string name="aValue">a value</string>
    <string name="bValue">b value</string>
    <string name="cValue">c value</string>
    <string name="mMeterReading">Magnetometer Readings</string>
    <string name="input_url_key">com.example.SilentObserver.input_url_key</string>
</resources>